--- a/src/components/layouts/HeadMeta.astro
+++ b/src/components/layouts/HeadMeta.astro
@@ -16,6 +16,7 @@ const { title, description, image } = Astro.props;
 />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="sitemap" href="/sitemap-index.xml" />
+<link rel="canonical" href={Astro.url} />
 <meta name="generator" content={Astro.generator} />
 
 <!-- Primary Meta Tags -->
@@ -38,8 +39,8 @@ const { title, description, image } = Astro.props;
 <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
 <link
-    rel="alternate"
-    type="application/rss+xml"
-    title={title}
-    href={new URL("rss.xml", Astro.site)}
+  rel="alternate"
+  type="application/rss+xml"
+  title={title}
+  href={new URL('rss.xml', Astro.site)}
 />
