feat: favicon 변경

--- a/src/components/json-ld/article.astro
+++ b/src/components/json-ld/article.astro
@@ -14,7 +14,7 @@ const {
   image = '/og_image.png',
   pubDate,
   lastModified,
-  author = 'slate',
+  author = 'Vitnal',
 } = Astro.props;
 const jsonLd = JSON.stringify({
   '@context': 'https://schema.org',
